1.2 (unreleased)
----------------

- you can now remove model attributes with `del`
- add :meth:`atomx.models.Report.csv` property that returns the report content as a list


1.1
---

- fix: setup.py not working under some environments (`open` used wrong codec)
- add SellerProfile model
- add `offset` parameter to report.get


1.0
---

- First release